diesel-builders-macros/tests/ui/fail/derive_no_horizontal_same_as_group_no_diesel_attr.rs
// Test that NoHorizontalSameAsGroup derive fails without diesel attribute

use diesel_builders_macros::NoHorizontalSameAsGroup;

#[derive(NoHorizontalSameAsGroup)]
struct User {
    id: i32,
    name: String,
}

fn main() {}
